@@ -1,4 +1,5 @@
 0.07 - not yet released
+ - escape backticks for option names, to allow crazy options
  - Fix a bug to allow UTF8 characters in regexps - Thanks Takatoshi Kitano
  - Add the 'include' command to the base fixture
  - move non-selenium functions into the fixture base class
